Remove text-align for h1 and h2, fix footer
The use of Flexbox on the body eliminated the need for text-align on
h1 and h2 elements. Had to specify explicitly for the footer to stretch

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
 
 h1, h2 {
     font-family: 'Oswald', sans-serif;
-    text-align: center;
 }
 
 h1 {
@@ -77,6 +76,8 @@ footer {
     background-color: #222538;
 
     box-shadow: 0px -1px 12px -1px #000000;
+
+    align-self: stretch;
 }
 
 footer > a {
